[package]
name = "harmony"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../README.md"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }

serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
serde_json = { workspace = true }

axum = { workspace = true, features = ["json", "query"] }
axum-server = { workspace = true, features = ["tls-rustls"] }

tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

rusqlite = { workspace = true, features = ["chrono"] }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true, features = ["bundled"] }

ring = { workspace = true }
base64 = { workspace = true, features = ["alloc"] }
rust_decimal = { workspace = true, features = ["serde"] }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }